# mcpib

./: CMakeLists.txt  LICENSE  README.md  TODO
include/mcpib/: Callable.hpp  CallableOverload.hpp  Class.hpp  FromPython.hpp  FromPythonConverter.hpp  GetSignature.hpp  Holder.hpp  Module.hpp  PyPtr.hpp  PythonException.hpp  ToPythonConverter.hpp  ToPythonTraits.hpp  TypeInfo.hpp  TypeRegistration.hpp  TypeRegistry.hpp  WrapperError.hpp  metaprogramming.hpp
include/mcpib/builtin/: numeric.hpp
include/mcpib/detail/: FromPythonImpl.hpp  InstanceFromPython.hpp
include/mcpib/internal/: initializers.hpp  trace.hpp
lib/: CMakeLists.txt
lib/src/: Callable.cpp  CallableOverload.cpp  Class.cpp  Module.cpp  PyPtr.cpp  PythonException.cpp  TypeInfo.cpp  TypeRegistration.cpp  TypeRegistry.cpp  WrapperError.cpp
lib/src/builtin/: numeric.cpp
lib/src/detail/: FromPythonImpl.cpp
lib/src/internal/: format.cc
python/mcpib/: CMakeLists.txt  __init__.py  _mcpib.cpp  numbers.cpp  strings.cpp
tests/: CMakeLists.txt  builtin_numeric_mod.cpp  builtin_numeric_test.py  builtin_strings_mod.cpp  builtin_strings_test.py  class_mod.cpp  class_test.py  cpp_utils_mod.cpp  cpp_utils_test.py  exceptions_test.py  overloads_mod.cpp  overloads_test.py
